# tanager_wildfire

./: .gitignore  CITATION.cff  CLAUDE.md  Makefile  README.md  provenance.json  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  engineering-memory.md  product-memory.md  project-summary.md  research-memory.md  technical-memo.md  zenodo-deposit-guide.md
notebooks/: 02-burn-severity.ipynb  03-fuel-moisture.ipynb  04-temporal-recovery.ipynb  05-sensor-comparison.ipynb
openspec/: AGENTS.md  PROCESS.md  project.md
openspec/changes/002-data-pipeline/: proposal.md  tasks.md
openspec/changes/002-data-pipeline/specs/data-pipeline/: spec.md
openspec/changes/003-core-analysis/: engineering-notes.md  tasks.md
openspec/changes/004-visualization-overhaul/: engineering-notes.md  proposal.md  tasks.md
openspec/changes/004-visualization-overhaul/specs/visualization/: spec.md
outputs/: dnbr_overlap_analysis.md  pipeline_report.md
research/: competition-tc-compliance-review.md  endmember-library-research.md  hyperspectral-wildfire-literature-review.md  tanager-competition-analysis.md  tanager-data-access-evaluation.md  tanager-deep-research.md  wildfire-hyperspectral-literature-review.md
scripts/: run_aviris3_validation.py  run_notebook_suite.sh  run_pipeline.py
src/tanager/: __init__.py  config.py  endmembers.py  io.py  lfmc.py  masks.py  provenance.py  severity.py  spectral.py  unmixing.py  validation.py  visualization.py
tests/: test_add_scalebar.py  test_coregistration.py  test_endmembers.py  test_lfmc.py  test_masks.py  test_notebooks.py  test_overlay_perimeters.py  test_pipeline.py  test_plot_orientation.py  test_plot_temporal_trajectory.py  test_provenance.py  test_severity.py  test_spectral.py  test_unmixing.py  test_validation.py  test_visualization.py
