[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanager"
version = "0.1.0"
description = "Hyperspectral wildfire analysis pipeline for Planet Tanager-1 imagery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "gpriceless" },
]

dependencies = [
    "hypercoast>=0.22.0,<1.0",
    "spectral",
    "rasterio>=1.3",
    "rioxarray>=0.13",
    "xarray",
    "geopandas>=0.12",
    "scikit-learn",
    "pystac",
    "requests",
    "spyndex",
    "h5py",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that depend on bulk data assets (real Tanager HDF5 scenes)",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
