[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanager"
version = "0.1.0"
description = "Hyperspectral wildfire analysis pipeline for Planet Tanager-1 imagery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "gpriceless" },
]

dependencies = [
    "hypercoast>=0.22.0,<1.0",
    "spectral",
    "rasterio>=1.3",
    "rioxarray>=0.13",
    "xarray",
    "geopandas>=0.12",
    "scikit-learn",
    "pystac",
    "requests",
    "spyndex",
    "h5py",
    "scipy>=1.10",
    "spectral-libraries>=1.1.3",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
mesma = ["mesma>=1.0.8"]
# splib07-loader is not on PyPI; repo https://github.com/RobertSparworthy/splib07-loader.git
# returned "Repository not found" as of 2026-04-28. Install manually if the repo becomes
# available, or replace with an alternative USGS spectral loader.
# splib07 = ["splib07-loader @ git+https://github.com/RobertSparworthy/splib07-loader.git"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that depend on bulk data assets (real Tanager HDF5 scenes)",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
